--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,10 @@ line-length = 100
 
 [tool.ruff.lint]
 select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
+ignore = ["N818"]
+
+[tool.ruff.lint.per-file-ignores]
+"examples/*" = ["E501"]
 
 [tool.mypy]
 python_version = "3.11"
