--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,4 +25,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
       - name: Run tests
-        run: pytest --cov=vkworkspace --cov-report=term-missing
+        run: pytest --cov=vkworkspace --cov-report=term-missing || test $? -eq 5
