--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -7,28 +7,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
     - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.13"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install ruff
+      run: uv python install 3.13
     - name: Check code with ruff
-      run: ruff check .
+      run: uvx ruff check .
 
-  mypy:
+  pyright:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
     - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.13"
+      run: uv python install 3.13
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
-    - name: Check types with mypy
-      run: mypy vkworkspace/ --ignore-missing-imports
+      run: uv pip install --system -e ".[dev]"
+    - name: Check types with pyright
+      run: uvx pyright vkworkspace/
