--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "vkworkspace"
-version = "1.3.0"
+version = "1.4.0"
 description = "Fully async framework for building VK Teams (VK Workspace) bots, inspired by aiogram 3"
 readme = "README.md"
 license = { text = "MIT" }
@@ -44,7 +44,7 @@ dev = [
     "pytest-asyncio>=0.24",
     "pytest-cov>=5.0",
     "ruff>=0.5",
-    "mypy>=1.10",
+    "pyright>=1.1",
 ]
 all = ["vkworkspace[redis,dev]"]
 
@@ -62,17 +62,19 @@ target-version = "py311"
 line-length = 100
 
 [tool.ruff.lint]
-select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
-ignore = ["N818"]
+select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "C901", "SIM", "PERF", "RUF"]
+ignore = ["N818", "RUF001", "RUF002", "RUF003"]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 12
 
 [tool.ruff.lint.per-file-ignores]
-"examples/*" = ["E501"]
+"examples/*" = ["E501", "C901", "PERF"]
+"tests/*" = ["C901"]
 
-[tool.mypy]
-python_version = "3.11"
-strict = true
-warn_return_any = true
-warn_unused_configs = true
+[tool.pyright]
+pythonVersion = "3.11"
+typeCheckingMode = "standard"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
