--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         run: uv python install ${{ matrix.python-version }}
       - name: Install dependencies
-        run: uv pip install --system -e ".[dev]"
+        run: uv venv --python ${{ matrix.python-version }} && uv pip install -e ".[dev]"
       - name: Run tests
-        run: pytest --cov=vkworkspace --cov-report=term-missing || test $? -eq 5
+        run: uv run pytest --cov=vkworkspace --cov-report=term-missing || test $? -eq 5
